--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="header-caption container">
     	<div class="row">
 			<div style="margin-bottom: 0 !important; margin-top: 5rem !important;" class="col-lg mobile text-center mb-0">
-    			<img src="static/img/green_stars.svg">
+    			<img style="width: 90%;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
 		      <div class="header-content fade-in">
@@ -93,14 +93,14 @@
 				</div>
 			</div>
 			<div class="content-text mb-5 text-center">
-				<span style="opacity: 0.6;">
+				<span style="opacity: 0.8;">
 					En 2020 la Convención de las Naciones Unidas para Combatir la Desertificación y la Pobreza (UNCCD) reconoció a nuestra marca Medegreen2030 (en bold) como una de las cinco marcas ciudad más influyentes y constructivas de América Latina y el Caribe, contando con el aval y la certificación de la ONU (en bold) como aliado estratégico en todas las operaciones.
 				</span>
 			</div>
 		</section>
 		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
 			<div class="content-text mb-5 text-center">
-				<span style="opacity: 0.6;">
+				<span style="opacity: 0.8;">
 					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia.
 				</span>
 				<br>
@@ -134,25 +134,26 @@
 		<section class="container margin-8 mb-8 mt-8">
 			<div class="row">
 				<div class="col-sm-3 text-center pb-5">
-					<img class="thinker m-auto" src="static/img/thinker_1.jpg" alt="">
-					<div class="content-text mt-3">
-						ALBERT GARCIA
-					</div>
-					<div class="about-card-text">
-						Presidente de la junta de negocios de Wynwood Walls
-						<br>
-						Miami
-					</div>
-				</div>
-				<div class="col-sm-3 text-center pb-5">
 					<img class="thinker m-auto" src="static/img/thinker_2.jpg" alt="">
 					<div class="content-text mt-3">
 						GUILLERMO GIL
 					</div>
 					<div class="about-card-text">
+						<span style="font-weight: bold; opacity: 0.5;">Bilbao, España</span>
+						<br>
 						Coordinador del Clúster de Conocimiento en Tecnologías de la Información y de la Comunicación.
 						<br>
-						Bilbao
+					</div>
+				</div>
+				<div class="col-sm-3 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/post_thinker_6.png" alt="">
+					<div class="content-text mt-3">
+						DANIELLE BERTI
+					</div>
+					<div class="about-card-text">
+						<span style="font-weight: bold; opacity: 0.5;">Rio de Janeiro, Brasil</span>
+						<br>
+						CEO de la DBerti Comunica
 					</div>
 				</div>
 				<div class="col-sm-3 text-center pb-5">
@@ -161,9 +162,9 @@
 						ANA CARLA FONSECA REIZ
 					</div>
 					<div class="about-card-text">
-						Administradora Pública por la Fundação Getulio Vargas/FGV.
+						<span style="font-weight: bold; opacity: 0.5;">Sao Paulo, Brasil</span>
 						<br>
-						Sao Paulo
+						Administradora Pública por la Fundação Getulio Vargas/FGV.
 					</div>
 				</div>
 				<div class="col-sm-3 text-center pb-5">
@@ -172,9 +173,9 @@
 						CARLOS GOMEZ
 					</div>
 					<div class="about-card-text">
-						Reconocido Politologo, economista, orador y experto en territorio, gobierno y sostenbilidad.
+						<span style="font-weight: bold; opacity: 0.5;">Monterrey, México</span>
 						<br>
-						Monterrey
+						Reconocido Politologo, economista, orador y experto en territorio, gobierno y sostenbilidad.
 					</div>
 				</div>
 			</div>
@@ -255,7 +256,7 @@
 			<div class="container">
 				<div class="row no-mobile">
 					<div class="col-sm-3 m-auto text-right pb-5">
-						<img class="intern-logos" src="static/img/logo_imovi.jpg">
+						<img class="intern-logos" src="static/img/imovi-logo.png">
 					</div>
 					<div class="col-sm-3 m-auto text-right pb-5">
 						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
@@ -369,7 +370,7 @@
 				</div>
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
+						style="opacity: 0.8; font-weight: 400;">
 						Medegreen para tí.
 				</div>
 					<div class="content-body">
@@ -381,7 +382,7 @@
 			<div class="row no-mobile">
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
+						style="opacity: 0.8; font-weight: 400;">
 						Bogotagreen para tí.
 					</div>
 					<div class="content-body">
@@ -400,7 +401,7 @@
 				</div>
 				<div class="col-lg-6 m-auto">
 					<div class="content-title"
-						style="opacity: 0.5; font-weight: 400;">
+						style="opacity: 0.8; font-weight: 400;">
 					BogotaGreen Para Tí.
 					</div>
 					<div class="content-body">
@@ -419,7 +420,9 @@
 					<br>
 					<a style="font-size: 1.525rem; color: #007bff; font-weight: bold;" href="https://www.instagram.com/cpi3nsa/">CPI3NSA EN VIVO</a>
 					<br>
-					Conéctate con nosotros todos los Jueves a las 6pm en nuestro Cpi3nsa en VIVO.
+					Conéctate con nosotros todos los miércoles a las 7pm en nuestro Cpi3nsa en VIVO.
+					<br>
+					Únete al conocimiento Colectivo
 				</div>
 			</div>
 		</section>
