--- a/index.html
+++ b/index.html
@@ -39,30 +39,7 @@
 		    </div>
 		</div>
 	</nav>
-	<header class="mobile" style="height: auto !important; margin-top: 0 !important;">
-		<div class="header-caption container">
-			<div class="row">
-				<div style="margin-bottom: 0 !important; margin-top: 5rem !important;" class="col-lg mobile text-center mb-0">
-					<img style="width: 90%;" src="static/img/green_stars.svg">
-				</div>
-				<div class="col-lg">
-				  <div class="header-content fade-in">
-					<div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
-					<div class="header-subtitle">
-						Tanque de pensamiento y HUB creativo.
-						<br>
-						Transformamos negocios, gobiernos y territorios hacia el futuro y la sostenibilidad
-					</div>
-					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Explora a Cpi3nsa</a>
-				  </div>
-				</div>
-				<div class="col-lg no-mobile text-center">
-					<img src="static/img/green_stars.svg">
-				</div>
-			</div>
-		</div>
-		</header>
-	<header class="no-mobile">
+	<header>
     <div class="header-caption container">
     	<div class="row">
 			<div style="margin-bottom: 0 !important; margin-top: 5rem !important;" class="col-lg mobile text-center mb-0">
