--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<div class="header-subtitle">
 								Nuestro tanque de pensamiento está compuesto de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
-							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/cpi3nsa_doc.pdf">Descubre YA que podemos hacer por ti</a>
+							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">Descubre YA que podemos hacer por ti</a>
 						</div>
 					</div>
 				</div>
@@ -269,16 +269,13 @@
 					</div>
 				</div>
 				<div style="margin: 5rem auto !important;" class="row mobile">
-					<div class="col-sm-3 m-auto text-center pb-5">
-						<img class="intern-logos" style="width: 100px;" src="static/img/logo-Tesla.png">
-					</div>
-					<div class="col-sm-3 m-auto text-center pb-5">
+					<div class="col-sm-4 m-auto text-center pb-5">
 						<img class="intern-logos" src="static/img/logo_imovi.jpg">
 					</div>
-					<div class="col-sm-3 m-auto text-center pb-5">
+					<div class="col-sm-4 m-auto text-center pb-5">
 						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
 					</div>
-					<div class="col-sm-3 m-auto text-center pb-5">
+					<div class="col-sm-4 m-auto text-center pb-5">
 						<img class="intern-logos" src="static/img/logo_fakts.png">
 					</div>
 				</div>
@@ -447,7 +444,7 @@
 	      </div>
 	      <div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 	        <div class="m-auto">
-			  <a href="static/docs/cpi3nsa_doc.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+			  <a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
 	          <!--<a href="#">online store</a> &nbsp;-->
 	          <a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 	          <a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
