--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="header-caption container">
     	<div class="row">
 			<div style="margin-bottom: 0 !important; margin-top: 5rem !important;" class="col-lg mobile text-center mb-0">
-    			<img style="width: 90%;" src="static/img/green_stars.svg">
+    			<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
 		      <div class="header-content fade-in">
