--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<header>
     <div class="header-caption container">
     	<div class="row">
-			<div class="col-lg mobile text-center" style="margin-bottom: 0 !important; margin-top: 5rem !important;">
+			<div class="col-lg mobile text-center" style="margin: 0 !important; margin-bottom: 0 !important; margin-top: 5rem !important;">
     			<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
