--- a/manifiesto.html
+++ b/manifiesto.html
@@ -39,7 +39,7 @@
 		    </div>
 		</div>
 	</nav>
-	<header style="height: 20vh !important; background-color: transparent;"></header>
+	<header style="min-height: 20vh !important; background-color: transparent;"></header>
 	<main class="container" style="max-width: 900px;">
 		<section class="manifesto mb-5">
 			<div class="section-title text-center mb-5" style="font-size: 2rem; background-color: #efefef; padding: 2rem 0;">
