--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container margin-8 mb-8 mt-8">
+		<section class="container margin-8 mt-8">
 			<div class="row">
 				<div class="col-sm-3 text-center pb-5">
 					<img class="thinker m-auto" src="static/img/thinker_2.jpg" alt="">
@@ -410,7 +410,7 @@
 			</div>
 		</section>
 		<section style="background-color: #fefefe;">
-			<div class="container text-center" style="padding: 8rem 2rem;">
+			<div class="container text-center" style="padding: 2rem 2rem;">
 				<div class="section-title text-center" style="font-size: 1.125rem; font-weight: 400;">
 					<img src="static/img/ig_live.png" height="90" alt="">
 					<br>
