--- a/proyectos.html
+++ b/proyectos.html
@@ -39,7 +39,7 @@
 		    </div>
 		</div>
 	</nav>
-	<header style="height: 10vh !important;"></header>
+	<header style="min-height: 10vh !important; background-color: #ffffff;"></header>
 	<main class="container">
 		<section class="projects mt-10">
 			<div class="w-100 text-right mb-5">
