--- a/soluciones.html
+++ b/soluciones.html
@@ -40,11 +40,11 @@
 		    </div>
 		</div>
 	</nav>
-	<header style="height: 10vh !important;"></header>
+	<header style="min-height: 10vh !important; background-color: #ffffff;"></header>
 	<main class="container">
 		<section class="projects mt-10">
-			<div class="w-100 text-right mb-5">
-				<img src="static/img/growth.svg" style="width: 20%;">
+			<div class="w-100 text-center mb-5">
+				<img src="static/img/growth.svg" style="width: 40%;">
 			</div>
 			<div class="mb-5">
 				<div class="section-title"
