--- a/proyectos.html
+++ b/proyectos.html
@@ -42,8 +42,8 @@
 	<header style="min-height: 10vh !important; background-color: #ffffff;"></header>
 	<main class="container">
 		<section class="projects mt-10">
-			<div class="w-100 text-right mb-5">
-				<img src="static/img/nature.svg" style="width: 20%;">
+			<div class="w-100 text-center mb-5">
+				<img src="static/img/nature.svg" style="width: 30%;">
 			</div>
 			<div class="mb-8">
 				<div class="section-title"
