--- a/index.html
+++ b/index.html
@@ -98,9 +98,43 @@
 				</span>
 			</div>
 		</section>
+		<section class="container mb-8 p-2">
+			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: 400; margin-bottom: 3rem !important;">
+				PRIORIDADES
+			</div>
+			<div class="row">
+				<div class="col-sm-4 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/ecologia.jpg" alt="">
+					<div class="content-text mt-3">
+						ECOLOGÍA
+					</div>
+					<div class="about-card-text">
+						Fortaleciendo vinculos entre la humanidad y la naturaleza.
+					</div>
+				</div>
+				<div class="col-sm-4 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/educacion.png" alt="">
+					<div class="content-text mt-3">
+						EDUCACIÓN
+					</div>
+					<div class="about-card-text">
+						Creando caminos hacia la educación sensorial.
+					</div>
+				</div>
+				<div class="col-sm-4 text-center pb-5">
+					<img class="thinker m-auto" src="static/img/empresarial.jpg" alt="">
+					<div class="content-text mt-3">
+						EMPRESARIAL
+					</div>
+					<div class="about-card-text">
+						Ayudando a organizaciónes a nacer y otraa atransformarse hacia el futuro.
+					</div>
+				</div>
+			</div>
+		</section>
 		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
 			<div class="content-text mb-5 text-center">
-				<span style="opacity: 0.8;">
+				<span style="opacity: 0.6;">
 					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia.
 				</span>
 				<br>
@@ -258,7 +292,7 @@
 					<div class="col-sm-4 m-auto text-right pb-5">
 						<img class="intern-logos" src="static/img/imovi-logo.png">
 					</div>
-					<div class="col-sm-4 m-auto text-right pb-5">
+					<div class="col-sm-4 m-auto text-center pb-5">
 						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
 					</div>
 					<div class="col-sm-4 m-auto text-left pb-5">
