--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<header>
     <div class="header-caption container">
     	<div class="row">
-			<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 5rem !important; padding: 0 !important;">
+			<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
     			<img style="width: 90%; margin: 0 !important; padding: 0 !important;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 		</div>
-		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
+		<section style="margin-top: 8rem;" class="container mt-8 mb-8">
 			<div class="row no-mobile">
 				<div class="col-sm-4 m-auto text-right pb-5">
 					
@@ -99,7 +99,7 @@
 			</div>
 		</section>
 		<section class="container mb-8 p-2">
-			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: 400; margin-bottom: 3rem !important;">
+			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
 				PRIORIDADES
 			</div>
 			<div class="row">
@@ -166,6 +166,9 @@
 			</div>
 		</section>
 		<section class="container margin-8 mt-8">
+			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
+				MIEMBROS
+			</div>
 			<div class="row">
 				<div class="col-sm-3 text-center pb-5">
 					<img class="thinker m-auto" src="static/img/thinker_2.jpg" alt="">
@@ -288,6 +291,9 @@
 		<hr>
 		<section class="mt-8" style="padding-top: 2rem">
 			<div class="container">
+				<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
+					OTROS ALIADOS
+				</div>
 				<div class="row no-mobile">
 					<div class="col-sm-4 m-auto text-right pb-5">
 						<img class="intern-logos" src="static/img/imovi-logo.png">
