--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="header-caption container">
     	<div class="row">
 			<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
-    			<img style="width: 90%; margin: 0 !important; padding-top: 2rem !important;" src="static/img/green_stars.svg">
+    			<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
 		      <div class="header-content fade-in">
