--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="header-caption container">
     	<div class="row">
 			<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
-    			<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
+    			<img style="width: 90%; margin: 0 !important; margin-top: 2rem;" src="static/img/green_stars.svg">
     		</div>
     		<div class="col-lg">
 		      <div class="header-content fade-in">
@@ -104,7 +104,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 text-center pb-5">
-					<img class="thinker m-auto" src="static/img/ecologia.jpg" alt="">
+					<img class="thinker m-auto" src="static/img/ecologia.png" alt="">
 					<div class="content-text mt-3">
 						ECOLOGÍA
 					</div>
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 				<div class="col-sm-4 text-center pb-5">
-					<img class="thinker m-auto" src="static/img/empresarial.jpg" alt="">
+					<img class="thinker m-auto" src="static/img/empresarial.png" alt="">
 					<div class="content-text mt-3">
 						EMPRESARIAL
 					</div>
@@ -219,11 +219,11 @@
 		</section>
 		<section class="about container">
 			<div class="m-8 mb-5">
-				<div class="section-title"
-					style="opacity: 0.8; font-weight: 400;">
-					¿Cómo funciona?
+				<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
+					¿CÓMO FUNCIONA?
+					<br>
+					<a href="/modelo_integracion.html">— Conoce más —</a>
 				</div>
-				<a href="/modelo_integracion.html">— Conoce más</a>
 			</div>
 			<div class="row">
 				<div class="col-lg-3">
@@ -387,16 +387,9 @@
 			</div>
 		</section>
 		<hr>
-		<section class="projects container mt-10">
-			<div class="row mb-0">
-				<div class="col-lg-6">
-					<div class="mb-8">
-						<div class="section-title"
-							style="opacity: 0.8; font-weight: 400;">
-							Ciudades Conscientes
-						</div>
-					</div>
-				</div>
+		<section class="projects container" style="margin-top: 4rem;">
+			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
+				CIUDADES CONSCIENTES
 			</div>
 			<div class="row">
 				<div class="col-lg-6">
