--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					<br>
 					Transformamos negocios, gobiernos y territorios hacia el futuro y la sostenibilidad
 				</div>
-				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Explora a Cpi3nsa</a>
-		      </div>
+			</div>
+			<a class="btn" href="#tanque">Explora a Cpi3nsa</a>
     		</div>
     		<div class="col-lg no-mobile text-center">
     			<img src="static/img/green_stars.svg">
@@ -142,7 +142,7 @@
 				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Quiero donar a estas causas</a>
 			</div>
 		</section>
-		<section class="mt-8 mb-8 container">
+		<section id="tanque" class="mt-8 mb-8 container">
 			<div class="header-caption">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
@@ -349,7 +349,7 @@
 					<div class="col-sm-9 m-auto" style="opacity: 0.8;">
 						<div class="content-text mb-4">
 							<div class="font-italic">
-								"No debemos ser ruidosos, pero si relevantes. Enfocándonos siempre en generar transacción. ¡El Green Marketing es la mejor forma de hacerlo!.
+								"No debemos ser ruidosos pero sí relevantes, enfocándonos siempre en generar transacción. ¡Y el Green Marketing es la mejor forma de hacerlo!.
 								<br>
 								Déjame ayudarte en este tema…"
 							</div>
@@ -468,7 +468,6 @@
 	          <a href="#"><i class="fab fa-facebook-f"></i></a>
 	          <a href="#"><i class="fab fa-twitter"></i></a>
 	          <a href="#"><i class="fab fa-instagram"></i></a>
-	          <a href="#"><i class="fab fa-linkedin-in"></i></a>
 	        </div>
 	        <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 	      </div>
