--- a/soluciones.html
+++ b/soluciones.html
@@ -177,12 +177,12 @@
 		</section>
 		<hr>
 		<section style="background-color: #fefefe;">
-			<div class="container text-center" style="padding: 8rem 2rem;">
+			<div class="container text-center" style="padding: 2rem 2rem;">
 				<div class="section-title text-center" style="font-size: 1.125rem; font-weight: 400; font-style: italic;">
 					Hola! Soy Abi, necesitas ayuda para tomar una buena decisión?
 					<br>
 					<br>
-					<a style="font-size: 1.525rem; color: #007bff; font-weight: bold;" href="https://www.instagram.com/cpi3nsa/">Escríbeme para asistirte!</a>
+					<a style="font-size: 1.525rem; color: #007bff; font-weight: bold;" href="https://hablemos574452.typeform.com/to/AHHYnkAm/">Escríbeme para asistirte!</a>
 				</div>
 			</div>
 		</section>
