--- a/manifiesto.html
+++ b/manifiesto.html
@@ -80,7 +80,7 @@
 				<br>
 				<br>
 				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
-					<a href="static/docs/cpi3nsa_doc.pdf">
+					<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">
 						MÁS ACERCA DE CPI3NSA
 					</a>
 				</div>
@@ -107,13 +107,12 @@
 				<a href="#"><i class="fab fa-facebook-f"></i></a>
 				<a href="#"><i class="fab fa-twitter"></i></a>
 				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-linkedin-in"></i></a>
 			  </div>
 			  <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 			</div>
 			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 			  <div class="m-auto">
-				<a href="static/docs/cpi3nsa_doc.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+				<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
 				<!--<a href="#">online store</a> &nbsp;-->
 				<a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
 				<a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
