--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
 		</div>
 	</nav>
 	<header>
-    <div class="header-caption container">
-    	<div class="row">
-			<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
-    			<img style="width: 90%; margin: 0 !important; margin-top: 2rem;" src="static/img/green_stars.svg">
-    		</div>
-    		<div class="col-lg">
-		      <div class="header-content fade-in">
-		        <div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
-		        <div class="header-subtitle">
-					Tanque de pensamiento y HUB creativo.
-					<br>
-					Transformamos negocios, gobiernos y territorios hacia el futuro y la sostenibilidad
+		<div class="header-caption container">
+			<div class="row">
+				<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
+					<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
+				</div>
+				<div class="col-lg">
+				<div class="header-content fade-in">
+					<div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
+					<div class="header-subtitle">
+						Tanque de pensamiento y HUB creativo.
+						<br>
+						Transformamos negocios, gobiernos y territorios hacia el futuro y la sostenibilidad
+					</div>
+				</div>
+				<a class="btn" href="#tanque">Explora a Cpi3nsa</a>
+				</div>
+				<div class="col-lg no-mobile text-center">
+					<img src="static/img/green_stars.svg">
 				</div>
 			</div>
-			<a class="btn" href="#tanque">Explora a Cpi3nsa</a>
-    		</div>
-    		<div class="col-lg no-mobile text-center">
-    			<img src="static/img/green_stars.svg">
-    		</div>
 		</div>
-    </div>
 	</header>
 	<main>
 		<div id="preLoader">
