--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</span>
 			</div>
 		</section>
-		<section class="container mb-8 p-2">
+		<section class="container mb-2 p-2">
 			<div class="text-center section-title mt-4 mb-4" style="opacity: 0.8; font-weight: bold; margin-bottom: 3rem !important;">
 				PRIORIDADES
 			</div>
@@ -127,22 +127,22 @@
 						EMPRESARIAL
 					</div>
 					<div class="about-card-text">
-						Ayudando a organizaciónes a nacer y otraa atransformarse hacia el futuro.
+						Ayudando a organizaciónes a nacer y otra atransformarse hacia el futuro.
 					</div>
 				</div>
 			</div>
 		</section>
-		<section style="margin-top: 2rem;" class="container mt-8 mb-8">
+		<section style="margin-top: 2rem;" class="container mb-8">
 			<div class="content-text mb-5 text-center">
 				<span style="opacity: 0.6;">
 					El 1% de los ingresos de la organización son destinados a causas ambientales, educación sensorial y reivindicación de la mujer en la sociedad tales como: Reforestación, cápsulas de conocimiento para niñ@s y lucha contra el cancer de mama en Colombia.
 				</span>
 				<br>
 				<br>
-				<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Quiero donar a estas causas</a>
+				<a  id="tanque" class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Quiero donar a estas causas</a>
 			</div>
 		</section>
-		<section id="tanque" class="mt-8 mb-8 container">
+		<section class="mt-8 mb-8 container">
 			<div class="header-caption">
 				<div class="row">
 					<div class="col-lg-6 pl-5 pr-5">
@@ -307,7 +307,7 @@
 				</div>
 				<div style="margin: 5rem auto !important;" class="row mobile">
 					<div class="col-sm-4 m-auto text-center pb-5">
-						<img class="intern-logos" src="static/img/logo_imovi.jpg">
+						<img class="intern-logos" src="static/img/imovi-logo.png">
 					</div>
 					<div class="col-sm-4 m-auto text-center pb-5">
 						<img class="intern-logos" src="static/img/logo_kaptar.jpg">
@@ -439,6 +439,7 @@
 				</div>
 			</div>
 		</section>
+		<hr>
 		<section style="background-color: #fefefe;">
 			<div class="container text-center" style="padding: 2rem 2rem;">
 				<div class="section-title text-center" style="font-size: 1.125rem; font-weight: 400;">
@@ -465,9 +466,9 @@
 	      </div>
 	      <div class="col-md-4 footer-content text-center">
 	        <div class="footer-social-links m-auto">
-	          <a href="#"><i class="fab fa-facebook-f"></i></a>
+	          <a href="https://m.facebook.com/Cpi3nsa/"><i class="fab fa-facebook-f"></i></a>
 	          <a href="#"><i class="fab fa-twitter"></i></a>
-	          <a href="#"><i class="fab fa-instagram"></i></a>
+	          <a href="https://www.instagram.com/cpi3nsa/"><i class="fab fa-instagram"></i></a>
 	        </div>
 	        <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 	      </div>
