--- a/proyectos.html
+++ b/proyectos.html
@@ -134,9 +134,9 @@
 			</div>
 			<div class="col-md-4 footer-content text-center">
 			  <div class="footer-social-links m-auto">
-				<a href="#"><i class="fab fa-facebook-f"></i></a>
+				<a href="https://m.facebook.com/Cpi3nsa/"><i class="fab fa-facebook-f"></i></a>
 				<a href="#"><i class="fab fa-twitter"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.instagram.com/cpi3nsa/"><i class="fab fa-instagram"></i></a>
 			  </div>
 			  <!--<p class="copyright text-left">&copy; Cpi3nsa | All Rights Reserved</p> -->
 			</div>
