--- a/index.html
+++ b/index.html
@@ -76,18 +76,7 @@
 			</div>
 		</div>
 		<section style="margin-top: 8rem;" class="container mt-8 mb-8">
-			<div class="row no-mobile">
-				<div class="col-sm-4 m-auto text-right pb-5">
-					
-				</div>
-				<div class="col-sm-4 m-auto text-center pb-5">
-					<img class="intern-logos" src="static/img/onu.jpg">
-				</div>
-				<div class="col-sm-4 m-auto text-right pb-5">
-					
-				</div>
-			</div>
-			<div class="row mobile" style="margin-bottom: 1rem !important;">
+			<div class="row">
 				<div class="col-sm-4 m-auto text-center pb-5">
 					<img class="intern-logos" src="static/img/onu.jpg">
 				</div>
@@ -157,7 +146,7 @@
 								¡Pensamos contigo!
 							</div>
 							<div class="header-subtitle">
-								Nuestro tanque de pensamiento está compuesto de pensadores, empresarios y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
+								Nuestro tanque de pensamiento está compuesto de pensador@s, empresari@s y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
 							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">Descubre YA que podemos hacer por ti</a>
 						</div>
