--- a/proyectos.html
+++ b/proyectos.html
@@ -116,7 +116,7 @@
 						Cpi3nsa Kids
 					</div>
 					<div class="content-body">
-						Documentales y micro cápsulas de conocimiento, intercambio de saberes y pedagogia ecologica de niños y para niños, basado en la educación sensorial.
+						Documentales y micro cápsulas de conocimiento, intercambio de saberes y pedagogia ecologica de niñ@s y para niñ@s, basado en la educación sensorial.
 					</div>
 					<a class="btn" href="https://hablemos574452.typeform.com/to/AHHYnkAm">¡Quiero aportar a este proyecto!</a>
 				</div>
