--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 					<img src="static/img/bogotagreen.png" alt="">
 				</div>
 			</div>
-			<div class="row mobile">
+			<div style="margin: 2rem auto !important;" class="row mobile">
 				<div class="col-lg-6">
 					<img src="static/img/bogotagreen.png" alt="">
 				</div>
