--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						EMPRESARIAL
 					</div>
 					<div class="about-card-text">
-						Ayudando a organizaciónes a nacer y otra atransformarse hacia el futuro.
+						Ayudando a organizaciónes a nacer y otras a transformarse hacia el futuro.
 					</div>
 				</div>
 			</div>
