--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			</div>
 			<div class="content-text mb-5 text-center">
 				<span style="opacity: 0.8;">
-					En 2020 <span style="font-weight: bold">La Convención de las Naciones Unidas para Combatir la Desertificación y la Pobreza</span> (UNCCD) reconoció a nuestra marca <span style="font-weight: bold">Medegreen2030</span> como una de las cinco marcas ciudad más influyentes y constructivas de América Latina y el Caribe, contando con el aval y la certificación de la <span style="font-weight: bold;">ONU</span> como aliado estratégico en todas las operaciones.
+					En 2020 <span style="font-weight: bold">La Convención de las Naciones Unidas para Combatir la Desertificación y la Pobreza</span> (UNCCD), reconoció a nuestra marca <span style="font-weight: bold">Medegreen2030</span> como una de las cinco marcas ciudad más influyentes y constructivas de América Latina y el Caribe, contando con el aval y la certificación de la <span style="font-weight: bold;">ONU</span> como aliado estratégico en todas las operaciones.
 				</span>
 			</div>
 		</section>
