--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		<div class="header-caption container">
 			<div class="row">
 				<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
-					<img style="width: 90%; margin: 0 !important;" src="static/img/green_stars.svg">
+					<img style="width: 90%; margin: 0 !important; padding-bottom: 2rem;" src="static/img/green_stars.svg">
 				</div>
 				<div class="col-lg">
-				<div class="header-content fade-in">
+				<div class="fade-in">
 					<div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
 					<div class="header-subtitle">
 						Tanque de pensamiento y HUB creativo.
