--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<header>
 		<div class="header-caption container">
 			<div class="row">
-				<div class="mobile-no-margin col-lg text-center" style="margin: 0 auto !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
+				<div class="mobile-no-margin col-lg text-center" style="margin: 0 !important; margin-bottom: 0 !important; margin-top: 0 !important; padding: 0 !important;">
 					<img style="width: 90%; margin: 0 !important; padding-bottom: 2rem;" src="static/img/green_stars.svg">
 				</div>
 				<div class="col-lg">
