--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<div class="header-subtitle">
 								Nuestro tanque de pensamiento está compuesto de pensador@s, empresari@s y agentes de cambio, donde nos aseguramos que el conocimiento global y local llegue a manos tuyas y de quienes lo necesitan.
 							</div>
-							<a class="btn" style="padding: 0.7rem 2rem;" href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">Descubre YA que podemos hacer por ti</a>
+							<a class="btn" style="padding: 0.7rem 2rem;" href="https://hablemos574452.typeform.com/to/AHHYnkAm">Descubre YA que podemos hacer por ti</a>
 						</div>
 					</div>
 				</div>
