--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 									Red de Cooperación Nacional e Internacional
 								</div>
 								<div class="about-card-text">
-									Un imperativo organizacional de instituciones, alcaldías, organizaciones multilaterales, actores, grupos de interés y personas basados  en la apropiación pública del conocimiento.
+									Un imperativo organizacional de instituciones, alcaldías, actores y grupos de interés basados  en la apropiación del conocimiento.
 								</div>
 							</div>
 						</a>
