--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</nav>
 	<header>
 		<div class="header-caption container">
-			<img style="width: 90%; margin: 0 !important; padding: 0 !important;" src="static/img/green_stars.svg">
+			<img class="mobile-no-margin" style="width: 90%; margin: 0 !important; padding: 0 !important;" src="static/img/green_stars.svg">
 			<div class="row">
 				<div class="col-lg">
 					<div class="fade-in">
