--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="header-caption container">
 			<img class="mobile-no-margin" style="width: 90%; margin: 0 !important; padding: 0 !important;" src="static/img/green_stars.svg">
 			<div class="row">
-				<div class="col-lg">
+				<div style="margin-top: 2rem !important;" class="col-lg">
 					<div class="fade-in">
 						<div class="header-title">En el alma, en tu alma, se encuentran recursos para el mundo. <span style="font-size: 1rem; color: #222; opacity:0.7; font-weight: 400;">— RALPH WALDO EMERSON</span> </div>
 						<div class="header-subtitle">
