--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 								Líder de Estrategia Corporativa
 							</div>
 						</div>
-						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/F1xLfOAc">Crea con Armando!</a>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://cpi3nsa-hablemos.typeform.com/to/F1xLfOAc">Crea con Armando!</a>
 					</div>
 				</div>
 			</div>
@@ -347,7 +347,7 @@
 								Líder Organizacional de Marketing y Tendencias
 							</div>
 						</div>
-						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/sLSOe5ab">Habla con Sebas!</a>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://cpi3nsa-hablemos.typeform.com/to/sLSOe5ab">Habla con Sebas!</a>
 					</div>
 				</div>
 			</div>
@@ -368,7 +368,7 @@
 								Director General de Cpi3nsa
 							</div>
 						</div>
-						<a class="btn" style="padding: 0.7rem 2rem;" href="https://armando347776.typeform.com/to/FDwTlFKM">Únete al equipo de Santy!</a>
+						<a class="btn" style="padding: 0.7rem 2rem;" href="https://cpi3nsa-hablemos.typeform.com/to/FDwTlFKM">Únete al equipo de Santy!</a>
 					</div>
 				</div>
 			</div>
