--- a/manifiesto.html
+++ b/manifiesto.html
@@ -80,7 +80,7 @@
 				<br>
 				<br>
 				<div class="w-100 text-left mt-2" style="font-size: 0.9rem;">
-					<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">
+					<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf" target="_blank">
 						MÁS ACERCA DE CPI3NSA
 					</a>
 				</div>
@@ -112,10 +112,10 @@
 			</div>
 			<div class="col-md-4 footer-content text-center" style="font-size: 10px; text-transform: uppercase;">
 			  <div class="m-auto">
-				<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf">acerca de cpi3nsa</a>&nbsp; | &nbsp;
+				<a href="static/docs/[Cpi3nsa]_Conocimiento_Colectivo.pdf" target="_blank">acerca de cpi3nsa</a>&nbsp; | &nbsp;
 				<!--<a href="#">online store</a> &nbsp;-->
 				<a href="/proyectos.html"> proyectos</a>&nbsp; | &nbsp;
-				<a href="/static/docs/privacy_policy.pdf"> política de privacidad</a>
+				<a href="/static/docs/privacy_policy.pdf" target="_blank"> política de privacidad</a>
 			  </div>
 			</div>
 			<div class="col-md-4 footer-content text-center no-desktop">
