--- a/soluciones.html
+++ b/soluciones.html
@@ -49,13 +49,13 @@
 			<div class="mb-5">
 				<div class="section-title"
 					style="opacity: 0.9; font-weight: 400;">
-					Soluciones Integrales de Cooperación
+					Soluciones Inteligentes de Cooperación
 				</div>
 				<div class="content-body text-justify">
 					Lleva tu negocio al siguiente nivel a partir de las Soluciones Integrales de Cooperación.
 					<br>
 					<br>
-					Cuando adquieres a las soluciones integrales de cooperación del HUB Cpi3nsa, accedes a una red de conocimiento y expertos conformado por el equipo multidisciplinario asignado para ti. Este equipo te brindará el acompañamiento integral que buscas hacia la evolución de tu negocio.
+					Cuando adquieres las Soluciones Inteligentes de Cooperación (SIC), accedes a servicios de transformación para tu negocio hacia el futuro. También obtendrás el acompañamiento que requieres para la evolución hacia los nuevos órdenes económicos.
 					<br>
 					<br>
 					Esto es lo que necesitas saber!
