--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!-- Custom CSS -->
    <link rel="stylesheet" type="text/css" href="static/css/style.css">
    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
-   <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
+   <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
