--- a/soluciones.html
+++ b/soluciones.html
@@ -52,7 +52,7 @@
 					Soluciones Inteligentes de Cooperación
 				</div>
 				<div class="content-body text-justify">
-					Lleva tu negocio al siguiente nivel a partir de las Soluciones Integrales de Cooperación.
+					Lleva tu negocio al siguiente nivel a partir de las Soluciones Inteligentes de Cooperación.
 					<br>
 					<br>
 					Cuando adquieres las Soluciones Inteligentes de Cooperación (SIC), accedes a servicios de transformación para tu negocio hacia el futuro. También obtendrás el acompañamiento que requieres para la evolución hacia los nuevos órdenes económicos.
